--- a/README
+++ b/README
@@ -16,3 +16,4 @@ Titanium is Copyright (c) 2008-2016 by Appcelerator, Inc. All Rights Reserved.
 Titanium is licensed under the Apache Public License (Version 2). Please
 see the LICENSE file for the full license.
 
+<img src="/djmason9/Appcelerator-BioAuth/blob/BaseApplicationLogin/screenshots/androidScreen.png?raw=true"/>
